# llm-complete-command

./: README.md  environment_config.py  llm_complete_command.py  pyproject.toml  thinking_spinner.py
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
share/: llm-complete-command.bash  llm-complete-command.fish  llm-complete-command.zsh
src/llm_complete_command/: __init__.py  model_capabilities_cache.py  system_prompt.py  thinking_spinner.py
tests/: conftest.py  test_environment_config.py  test_llm_complete_command.py  test_model_capabilities_cache.py  test_plugin_integration.py  test_system_prompt.py  test_thinking_spinner.py
