[project]
name = "llm-complete-command"
version = "2.3.0"
description = "Use LLM to generate commands for your shell"
requires-python = ">=3.13"
readme = "README.md"
authors = [{name = "Ryan Patterson"},{name = "Scott Hyndman"}]
license = {text = "Apache-2.0"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = [
    "better-exceptions>=0.3.3",
    "llm",
    "loguru>=0.7.3",
    "platformdirs>=4.5.1",
    "prompt_toolkit>=3.0.43",
    "pyyaml>=6.0.3",
    "yaspin>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/shyndman/llm-complete-command"
Changelog = "https://github.com/shyndman/llm-complete-command/releases"
Issues = "https://github.com/shyndman/llm-complete-command/issues"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project.entry-points.llm]
complete_command = "llm_complete_command"

[tool.pyright]
include = ["src", "tests"]
ignore = [".venv"]
exclude = [".venv", ".pytest_cache"]
extraPaths = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
useLibraryCodeForTypes = true

[tool.hatch.build.targets.wheel]
packages = ["src/llm_complete_command"]

[tool.semantic_release]
build_command = """
python -m pip install --upgrade uv
uv lock --upgrade-package "$PACKAGE_NAME"
git add uv.lock
"""
commit_message = "chore(release): {version}"
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]

[dependency-groups]
dev = [
    "basedpyright>=1.37.4",
    "pytest>=8.4.2",
]
